--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="いでぐちタワーバトル">
+  <link rel="icon" href="favicon.png" type="image/x-icon">
   <title>いでぐちタワーバトル</title>
 </head>
 
