--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="いでぐちタワーバトル">
   <link rel="icon" href="favicon.png" type="image/x-icon">
+  <link rel="apple-touch-icon" href="favicon.png" sizes="180x180">
   <title>いでぐちタワーバトル</title>
 </head>
 
