--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover,user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="いでぐちタワーバトル">
+  <meta name="apple-mobile-web-app-title" content="いでぐちタワー">
   <link rel="icon" href="favicon.png" type="image/x-icon">
   <link rel="apple-touch-icon" href="favicon.png" sizes="180x180">
-  <title>いでぐちタワーバトル</title>
+  <title>いでぐちタワー</title>
 </head>
 
 <body style="text-align: center; padding: 0; border: 0; margin: 0;">
