--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta name="apple-mobile-web-app-title" content="いでぐちタワー">
   <link rel="icon" href="favicon.png" type="image/x-icon">
   <link rel="apple-touch-icon" href="favicon.png" sizes="180x180">
-  <title>いでぐちタワー</title>
+  <title>いでぐちタワーバトル</title>
 </head>
 
-<body style="text-align: center; padding: 0; border: 0; margin: 0;">
+<body style="background: #231F20; text-align:cantor; margin: 0;">
   <canvas id="unity-canvas" width=1080 height=810 tabindex="-1"
-    style="width: 1080px; height: 810px; background: #231F20"></canvas>
+    style="width: 1080px; height: 810px; background: #231F20; position:absolute; top:0; bottom:0; left:0; right:0; margin:auto;"></canvas>
   <script src="Build/Build.loader.js"></script>
   <script>
     if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
@@ -40,7 +40,7 @@
       streamingAssetsUrl: "StreamingAssets",
       companyName: "DefaultCompany",
       productName: "TowerBattle",
-      productVersion: "0.1.2",
+      productVersion: "0.6.0",
       // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
       // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
     });
